# migao

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  I18N.md  LICENSE  LICENSE-APACHE  README.md  ROADMAP.md  install.ps1
.agents/skills/test-e2e/: SKILL.md
.agents/skills/test-smoke/: SKILL.md  smoke.sh
.claude/skills/: verifier-watch.md
.github/workflows/: ci.yml  release.yml
data/: bigram.tsv  supplement.tsv
docs/: README.ja.md  README.ko.md  README.zh-CN.md  README.zh-TW.md  en.html  index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
examples/: ime_test.rs
scripts/: _gen_syllables.py  accuracy_gate.py  build_bigram.py  build_dict.py  build_pinyin_dict.py
skills/migao/: SKILL.md
src/: bigram.rs  dict.rs  lib.rs  main.rs  pinyin_dict.rs  rule.rs  viterbi.rs
src/ime/: daqian.rs  mod.rs  pinyin.rs
src/rules/: bopomofo.rs  english_from_bopomofo.rs  mod.rs  pinyin.rs
tests/accuracy/: golden.tsv
tests/integration/: test-watch.ps1
